--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="pds.isintheair.fr.crm_tab" >
+    package="pds.isintheair.fr.crmtab" >
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -15,21 +15,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".LoginActivity"
+            android:name="pds.isintheair.fr.crmtab.LoginActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_login"
             android:theme="@style/FullscreenTheme" >
         </activity>
         <activity
-            android:name=".crv.view.CrvMainActivity"
+            android:name="pds.isintheair.fr.crmtab.crv.view.CrvMainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
         <activity
-            android:name=".crv.view.CreateCrvActivity"
+            android:name="pds.isintheair.fr.crmtab.crv.view.CreateCrvActivity"
             android:windowSoftInputMode="stateHidden" />
         <activity
-            android:name=".crv.view.CrvHomeActivity"
+            android:name="pds.isintheair.fr.crmtab.crv.view.CrvHomeActivity"
             android:label="CRM-tab" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,7 +38,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".crv.view.CrvPreformatedMessage"
+            android:name="pds.isintheair.fr.crmtab.crv.view.CrvPreformatedMessage"
             android:label="@string/title_activity_crv_preformated_message"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
