--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.READ_PROFILE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 
     <application
@@ -71,6 +72,18 @@
             android:name="pds.isintheair.fr.crmtab.crv.view.CrvPreformatedMessage"
             android:label="@string/title_activity_crv_preformated_message"
             android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+
+
+        <activity
+         android:name=".admin.referentiel.client.activity.CRUDCustomerActivity"
+            android:label="@string/title_activity_crudcustomer"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
 
