--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -13,9 +13,11 @@
 
 
     <application
+        android:name=".CrmTabApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
@@ -40,6 +42,15 @@
             android:theme="@style/FullscreenTheme">
 
         </activity>
+
+        <activity android:name=".admin.referentiel.client.activity.CRUDCustomerActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+
         <activity
             android:name="pds.isintheair.fr.crmtab.crv.view.CrvMainActivity"
             android:label="@string/app_name"
@@ -52,10 +63,7 @@
             android:name="pds.isintheair.fr.crmtab.crv.view.CrvHomeActivity"
             android:label="CRM-tab" >
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+
         </activity>
 
         <activity
