--- a/android-crmtab/app/build.gradle
+++ b/android-crmtab/app/build.gradle
@@ -11,7 +11,8 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-        multiDexEnabled false
+        multiDexEnabled true
+
     }
     buildTypes {
         release {
@@ -24,34 +25,43 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+    }
+
+    sourceSets {
+        androidTest {
+            setRoot('src/androidTest')
+        }
+    }
+
 }
 
 
 dependencies {
-
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
+    compile 'junit:junit:4.12'
+    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:multidex:1.0.1'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'org.robolectric:robolectric:3.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     apt 'com.raizlabs.android:DBFlow-Compiler:2.2.1'
     compile 'com.raizlabs.android:DBFlow:2.2.1'
     compile 'com.raizlabs.android:DBFlow-Core:2.2.1'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
-    testCompile 'junit:junit:4.12'
-
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
-
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.google.code.gson:gson:2.5'
-
-    compile 'junit:junit:4.12'
-
+    testCompile 'org.robolectric:robolectric:3.0'
     testCompile 'org.mockito:mockito-core:1.10.19'
-
     compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:appcompat-v7:23.1.1'
@@ -59,10 +69,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.squareup:otto:1.3.8'
-
     compile 'com.mobsandgeeks:android-saripaar:2.0.3'
     compile 'org.osmdroid:osmdroid-android:5.0.1@aar'
-
 }
 
 
