--- a/android-crmtab/app/build.gradle
+++ b/android-crmtab/app/build.gradle
@@ -42,9 +42,9 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
 
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
-    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:design:23.+'
+    compile 'com.android.support:cardview-v7:+'
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.google.code.gson:gson:2.5'
 
@@ -56,8 +56,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
-    compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+
     compile 'com.squareup:otto:1.3.8'
 
     compile 'com.mobsandgeeks:android-saripaar:2.0.3'
