--- a/android-crmtab/app/build.gradle
+++ b/android-crmtab/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+    compile 'com.squareup.okhttp3:okhttp:3.0.1'
 
     compile 'com.android.support:appcompat-v7:+'
     compile 'com.android.support:design:23.+'
