--- a/server-rest/pom.xml
+++ b/server-rest/pom.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<parent>
+		<groupId>fr.pds.isintheair</groupId>
+		<artifactId>crm</artifactId>
+		<version>1.0</version>
+	</parent>
+
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>miage.pds</groupId>
 	<artifactId>api</artifactId>
 	<name>SpringRESTapi</name>
 	<packaging>war</packaging>
@@ -11,7 +16,9 @@
 		<java-version>1.6</java-version>
 		<org.springframework-version>3.1.1.RELEASE</org.springframework-version>
 		<org.aspectj-version>1.6.10</org.aspectj-version>
-		<org.slf4j-version>1.6.6</org.slf4j-version>
+		<org.slf4j-version>1.7.13</org.slf4j-version>
+		<org.morphia-version>1.0.1</org.morphia-version>
+		<org.mongodb-version>2.10.1</org.mongodb-version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -24,13 +31,13 @@
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
-			<version>2.10.1</version>
+			<version>${org.mongodb-version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.mongodb.morphia</groupId>
 			<artifactId>morphia</artifactId>
-			<version>1.0.1</version>
+			<version>${org.morphia-version}</version>
 		</dependency>
 
 
