--- a/server-rest/pom.xml
+++ b/server-rest/pom.xml
@@ -21,6 +21,8 @@
 		<org.mongodb-version>2.10.1</org.mongodb-version>
 	</properties>
 	<dependencies>
+
+
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
@@ -57,6 +59,12 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
 
