--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
         <activity android:name="net.hockeyapp.android.UpdateActivity"/>
 
         <activity
-            android:name=".tlacouque.uc.admin.ref.customer.activity.CRUDCustomerActivity"
+            android:name=".tlacouque.uc.admin.ref.customer.view.activity.CRUDCustomerActivity"
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
