--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         </activity>
 
         <activity
-            android:name=".jdatour.receive.ContactDetailActivity"
+            android:name=".jdatour.uc.phone.call.receive.ContactDetailActivity"
             android:theme="@style/FullscreenTheme"/>
 
         <activity
@@ -59,23 +59,23 @@
         </activity>
 
         <activity
-            android:name=".crv.view.CrvMainActivity"
+            android:name=".mbalabascarin.uc.edit.crv.view.CrvMainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-            android:name=".crv.view.CreateCrvActivity"
+            android:name=".mbalabascarin.uc.edit.crv.view.CreateCrvActivity"
             android:windowSoftInputMode="stateHidden"/>
         <activity
-            android:name=".crv.view.CrvHomeActivity"
+            android:name=".mbalabascarin.uc.edit.crv.view.CrvHomeActivity"
             android:label="CRM-tab">
         </activity>
 
 
-        <activity android:name=".jdatour.receive.CallActivity"/>
+        <activity android:name=".jdatour.uc.phone.call.receive.CallActivity"/>
 
         <activity
-            android:name=".crv.view.CrvPreformatedMessage"
+            android:name=".mbalabascarin.uc.edit.crv.view.CrvPreformatedMessage"
             android:label="@string/title_activity_crv_preformated_message"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
