--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<manifest
-    package="fr.pds.isintheair.crmtab"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest package="fr.pds.isintheair.crmtab"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
@@ -20,7 +18,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".common.view.activity.LoginActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -28,36 +25,29 @@
             android:theme="@style/FullscreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
         <activity
             android:name=".jdatour.uc.phone.call.receive.ContactDetailActivity"
             android:theme="@style/FullscreenTheme"/>
-
         <activity
             android:name=".common.view.activity.MainActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_main"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
-
         </activity>
-
         <activity android:name="net.hockeyapp.android.UpdateActivity"/>
-
         <activity
             android:name=".tlacouque.uc.admin.ref.customer.activity.CRUDCustomerActivity"
             android:theme="@style/AppTheme.NoActionBar">
-
         </activity>
-
         <activity
             android:name=".common.view.activity.AbstractActivity"
             android:label="@string/title_activity_abstract">
         </activity>
-
         <activity
             android:name=".mbalabascarin.uc.edit.crv.view.CrvMainActivity"
             android:label="@string/app_name"
@@ -70,10 +60,7 @@
             android:name=".mbalabascarin.uc.edit.crv.view.CrvHomeActivity"
             android:label="CRM-tab">
         </activity>
-
-
-        <activity android:name=".jdatour.uc.phone.call.receive.CallActivity"/>
-
+        <activity android:name=".jdatour.uc.phone.call.receive.view.CallActivity"/>
         <activity
             android:name=".mbalabascarin.uc.edit.crv.view.CrvPreformatedMessage"
             android:label="@string/title_activity_crv_preformated_message"
@@ -85,6 +72,7 @@
             android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
+
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </receiver>
@@ -92,6 +80,10 @@
         <service android:name=".jdatour.uc.phone.call.receive.controller.service.CallService"/>
         <service android:name=".jbide.uc.registercall.ListennerCallEndedEvent"/>
 
+        <activity
+            android:name=".common.view.activity.ContactDetailActivity"
+            android:label="@string/title_activity_contact_detail">
+        </activity>
     </application>
 
 </manifest>
