--- a/android-phonintheair/app/build.gradle
+++ b/android-phonintheair/app/build.gradle
@@ -1,4 +1,4 @@
-apply plugin    : 'com.android.application'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
@@ -25,8 +25,12 @@ android {
 }
 
 dependencies {
-    compile 'com.google.code.gson:gson:2.4'
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.google.code.gson:gson:2.4'
+    compile 'com.jakewharton:butterknife:7.0.1'
+
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'org.robolectric:robolectric:3.0'
