--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<<<<<<< HEAD
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="fr.pds.isintheair.crmtab" >
-=======
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fr.pds.isintheair.crmtab">
->>>>>>> uc-suggerer-server
+
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
@@ -16,12 +12,11 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-<<<<<<< HEAD
 
-=======
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
->>>>>>> uc-suggerer-server
+
 
     <application
         android:name=".common.CrmTabApplication"
@@ -38,35 +33,33 @@
             android:label="@string/title_activity_login"
             android:theme="@style/FullscreenTheme">
             <intent-filter>
-<<<<<<< HEAD
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-=======
+
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
->>>>>>> uc-suggerer-server
+
             </intent-filter>
         </activity>
         <activity
             android:name=".common.view.activity.ContactDetailActivity"
-<<<<<<< HEAD
-            android:theme="@style/FullscreenTheme">
-        </activity>
 
-=======
-            android:theme="@style/FullscreenTheme" />
->>>>>>> uc-suggerer-server
+            android:theme="@style/FullscreenTheme"></activity>
+
+
+        android:theme="@style/FullscreenTheme" />
+
         <activity
             android:name=".common.view.activity.MainActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_main"
             android:screenOrientation="portrait"
-<<<<<<< HEAD
 
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity android:name="net.hockeyapp.android.UpdateActivity"/>
+
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name="net.hockeyapp.android.UpdateActivity" />
         <activity
             android:name=".tlacouque.uc.admin.ref.customer.view.activity.CRUDCustomerActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -74,63 +67,37 @@
         </activity>
         <activity
             android:name=".common.view.activity.AbstractActivity"
-            android:label="@string/title_activity_abstract" >
-        </activity>
+            android:label="@string/title_activity_abstract"></activity>
         <activity
             android:name=".mbalabascarin.uc.edit.crv.view.CrvMainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
-        </activity>
-=======
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name="net.hockeyapp.android.UpdateActivity" />
-        <activity
-            android:name=".tlacouque.uc.admin.ref.customer.activity.CRUDCustomerActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".common.view.activity.AbstractActivity"
-            android:label="@string/title_activity_abstract" />
-        <activity
-            android:name=".mbalabascarin.uc.edit.crv.view.CrvMainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
->>>>>>> uc-suggerer-server
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+
         <activity
             android:name=".mbalabascarin.uc.edit.crv.view.CreateCrvActivity"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".mbalabascarin.uc.edit.crv.view.CrvHomeActivity"
-<<<<<<< HEAD
-            android:label="CRM-tab" >
-        </activity>
 
-        <activity android:name=".jdatour.uc.phone.call.receive.view.CallActivity"/>
+            android:label="CRM-tab"></activity>
 
-        <activity
-            android:name=".mbalabascarin.uc.edit.crv.view.CrvPreformatedMessage"
-            android:label="@string/title_activity_crv_preformated_message"
-            android:theme="@style/AppTheme.NoActionBar" >
-        </activity>
-        <activity android:name=".mbalabascarin.uc.edit.crv.view.VisitActivity" />
-=======
-            android:label="CRM-tab" />
         <activity android:name=".jdatour.uc.phone.call.receive.view.CallActivity" />
+
         <activity
             android:name=".mbalabascarin.uc.edit.crv.view.CrvPreformatedMessage"
             android:label="@string/title_activity_crv_preformated_message"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".mbalabascarin.uc.edit.crv.view.VisitActivity" />
 
->>>>>>> uc-suggerer-server
         <receiver
             android:name=".jdatour.uc.phone.call.receive.controller.broadcastreceiver.BootServiceBrodcastReceiver"
-            android:enabled="true" >
+            android:enabled="true">
             <intent-filter>
-<<<<<<< HEAD
-
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
-=======
+                
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
->>>>>>> uc-suggerer-server
+
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
@@ -145,21 +112,21 @@
             android:name=".ctruong.uc.propsect.suggestion.notification.service.NotificationIntentService"
             android:enabled="true"
             android:exported="false"></service>
-        <receiver android:name=".ctruong.uc.propsect.suggestion.notification.receiver.NotificationEventReceiver"/>
+
+        <receiver android:name=".ctruong.uc.propsect.suggestion.notification.receiver.NotificationEventReceiver" />
         <receiver android:name=".ctruong.uc.propsect.suggestion.notification.receiver.NotificationServiceStarterReceiver">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
-                <action android:name="android.intent.action.TIMEZONE_CHANGED"/>
-                <action android:name="android.intent.action.TIME_SET"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.TIMEZONE_CHANGED" />
+                <action android:name="android.intent.action.TIME_SET" />
             </intent-filter>
         </receiver>
 
-<<<<<<< HEAD
-        <service android:name=".jdatour.uc.phone.call.receive.controller.service.CallService"/>
-        <service android:name=".jbide.uc.registercall.ListennerCallEndedEvent"/>
 
-=======
->>>>>>> uc-suggerer-server
+        <service android:name=".jdatour.uc.phone.call.receive.controller.service.CallService" />
+        <service android:name=".jbide.uc.registercall.ListennerCallEndedEvent" />
+
+
     </application>
 
 </manifest>
