--- a/android-phonintheair/build.gradle
+++ b/android-phonintheair/build.gradle
@@ -1,6 +1,8 @@
 buildscript {
     repositories {
-        jcenter()
+        maven {
+            url "https://jcenter.bintray.com"
+        }
     }
 
     dependencies {
