--- a/android-phonintheair/build.gradle
+++ b/android-phonintheair/build.gradle
@@ -12,7 +12,9 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        maven {
+            url "https://jcenter.bintray.com"
+        }
     }
 }
 
