--- a/android-phonintheair/app/build.gradle
+++ b/android-phonintheair/app/build.gradle
@@ -34,8 +34,14 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
 
-    testCompile('org.powermock:powermock-api-mockito:1.6.2') {
+    testCompile('org.powermock:powermock-module-junit4:1.6.4') {
         exclude module: 'hamcrest-core'
         exclude module: 'objenesis'
     }
+
+    testCompile('org.powermock:powermock-api-mockito:1.6.4') {
+        exclude module: 'hamcrest-core'
+        exclude module: 'objenesis'
+    }
+    testCompile 'junit:junit:4.12'
 }
